<resources>
    <string name="app_name">HNG Mobile App</string>
    <string name="lucid">Lucid</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Go</string>
    <string name="logo">logo</string>
    <string name="login_info">Have an account?</string>
    <string name="signup_info">Don\'t an account?</string>
    <string name="greet1">Hi!</string>
    <string name="greet2">Welcome</string>
    <string name="user">user</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="check_icon">check_icon</string>
    <string name="reg_confirm">Registration Successful</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
